Relax JSON serialization tests. Fixes #7737 (#7738)
- new JSON test helper to basic Control serialization
- relax some JSON serialization tests so that they don't depend on translated string values
- minor automated IDE cleanups